--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
           </h3>
         </div>
         <span class="social-icon">
-          <i class="ri-facebook-fill"></i>
-          <i class="ri-instagram-fill"></i>
-          <i class="ri-github-fill"></i>
-          <i class="ri-linkedin-fill"></i>
+          <i class="ri-facebook-fill" href="https://www.facebook.com/share/16WcG8N9HA/"></i>
+          <i class="ri-instagram-fill" href="https://www.instagram.com/mr_dhaval_1210?igsh=Njg2aXo0eDRjdW9u"></i>
+          <i class="ri-github-fill" href="https://github.com/Dhavaldave121002"></i>
+          <i class="ri-linkedin-fill" href="https://www.linkedin.com/in/dhaval-dave-95ba50265?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"></i>
         </span>
       </div>
     </div>
