--- a/index.html
+++ b/index.html
@@ -595,6 +595,26 @@
       </a>
     </div>
   </div>
+  <section class="hero">
+    <div class="marquee-container">
+      <div class="marquee-track">
+        <div class="marque"><h1>Web Developer</h1><i class="ri-arrow-right-line"></i></div>
+        <div class="marque"><h1>App Developer</h1><i class="ri-arrow-right-line"></i></div>
+        <div class="marque"><h1>Frontend Engineer</h1><i class="ri-arrow-right-line"></i></div>
+        <div class="marque"><h1>UI/UX Designer</h1><i class="ri-arrow-right-line"></i></div>
+        <div class="marque"><h1>Web Developer</h1><i class="ri-arrow-right-line"></i></div>
+      </div>
+    </div>
+    
+
+    <!-- Hero Intro Text -->
+    <div class="intro">
+      <h2>Hello, I'm <span>Dhaval Dave</span></h2>
+      <p>I build clean, modern & performant web and mobile experiences.</p>
+    </div>
+  </section>
+
+
   <div id="contact" class="container-fluid contact-section d-flex justify-content-center align-items-center">
     <div class="contact-card mt-5">
       <h2 class="text-center">Let's Connect</h2>
@@ -623,6 +643,10 @@
       </form>
     </div>
   </div>
+  <footer class="footer-copy">
+    <span>©</span> 2025 Your Name. All rights reserved.
+  </footer>
+  
   
   
   
