--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
     </div>
   </div>
   <footer class="footer-copy">
-    <span>©</span> 2025 Your Name. All rights reserved.
+    <span>©</span> 2025 Dhaval Dave. All rights reserved.
   </footer>
   
   
