--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
           <div class="row g-md-4 g-5  justify-content-center">
             
     
-            <div class="col-6 col-md-3 d-flex justify-content-center align-items-center">
+            <div class="col-6 col-md-3 d-flex justify-content-center align-items-center m-1">
               <div class="skill-card" data-percentage="95">
                 <div class="circle">
                   <svg>
