--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </main>
 
     <section id="about" class="container-fluid about-section p-5 m-0">
-      <div class="row p-5 m-0 d-flex flex-column flex-md-row align-items-center">
+      <div class="row p-md-5 m-0 d-flex flex-column flex-md-row align-items-center">
         <!-- Profile Image Wrapper -->
         <div class="col-lg-4 d-flex justify-content-center mb-4 mb-md-0 position-relative">
           <div class="about-img-wrapper d-flex justify-content-center align-items-center">
