--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
     
         <!-- Intro Text -->
-        <div class="col-lg-7 offset-md-1 part">
+        <div class="col-lg-7 me-md-3 m-0 offset-md-1 part">
           <h2 class="about-heading">About Me</h2>
           <p class="about-intro">
             Driven by passion and precision, I craft interfaces that don’t just look good—they perform. With a sharp eye for detail and a knack for clean code, I transform ideas into seamless digital experiences. Whether it’s building responsive layouts or optimizing user interactions, I thrive on solving complex problems with elegant solutions. Always learning, always creating—this is where design meets development.
