--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 engaging digital experiences across all platforms.
               </p>
               <button onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'});">Get In Touch</button>
-              <button><a href="DD.pdf" download>CV Download</a></button>
+              <button><a href="Dhaval Dave.pdf" download>CV Download</a></button>
             </div>
           </li>
 
