--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 Creative Web & App Developer focused on delivering seamless,
                 engaging digital experiences across all platforms.
               </p>
-              <a onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'});">Get In Touch</a>
+              <button><a href="#contact">Get In Touch</a></button>
               <button><a href="Dhaval.pdf" download>CV Download</a></button>
             </div>
           </li>
