--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
                 Creative Web & App Developer focused on delivering seamless,
                 engaging digital experiences across all platforms.
               </p>
-              <button><a href="#contact">Get In Touch</a></button>
+              <button onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">
+                Get In Touch
+              </button>
               <button><a href="Dhaval.pdf" download>CV Download</a></button>
             </div>
           </li>
