--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 Creative Web & App Developer focused on delivering seamless,
                 engaging digital experiences across all platforms.
               </p>
-              <button onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})" class="d-sm-inline-block d-none">
+              <button onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})" class="d-sm-inline-none d-block">
                 Get In Touch
               </button>              
               <button><a href="Dhaval.pdf" download>CV Download</a></button>
