--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
                 Creative Web & App Developer focused on delivering seamless,
                 engaging digital experiences across all platforms.
               </p>
-              <button onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})" class="d-sm-inline-none d-block">
+              <button onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">
                 Get In Touch
-              </button>              
+              </button>
               <button><a href="Dhaval.pdf" download>CV Download</a></button>
             </div>
           </li>
