--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 Creative Web & App Developer focused on delivering seamless,
                 engaging digital experiences across all platforms.
               </p>
-              <button onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">
+              <button onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})" class="d-none d-sm-none d-md-block">
                 Get In Touch
               </button>
               <button><a href="Dhaval.pdf" download>CV Download</a></button>
