--- a/index.html
+++ b/index.html
@@ -153,10 +153,12 @@
                 Creative Web & App Developer focused on delivering seamless,
                 engaging digital experiences across all platforms.
               </p>
+              <div class="btnpart">
               <button onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})" class="d-none d-sm-none d-md-block">
                 Get In Touch
               </button>
               <button><a href="Dhaval.pdf" download>CV Download</a></button>
+            </div>
             </div>
           </li>
 
