--- a/index.html
+++ b/index.html
@@ -153,12 +153,18 @@
                 Creative Web & App Developer focused on delivering seamless,
                 engaging digital experiences across all platforms.
               </p>
-              <div class="btnpart">
-              <button onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})" class="d-none d-sm-none d-md-block">
-                Get In Touch
-              </button>
-              <button><a href="Dhaval.pdf" download>CV Download</a></button>
-            </div>
+              <div class="btnpart d-flex flex-column flex-md-row justify-content-center align-items-center gap-2">
+                <button 
+                  onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})" 
+                  class="btn btn-primary d-none d-md-block">
+                  Get In Touch
+                </button>
+              
+                <button class="btn btn-outline-primary">
+                  <a href="Dhaval.pdf" download class="text-decoration-none text-primary">CV Download</a>
+                </button>
+              </div>
+              
             </div>
           </li>
 
