--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                   Get In Touch
                 </button>
               
-                <a href="Dhaval.pdf" download class="btn btn-outline-primary">
+                <a href="Dhaval.pdf" download class="btn">
                   CV Download
                 </a>
               </div>
