--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <div class="btnpart d-flex flex-column flex-sm-row justify-content-center justify-content-lg-start align-items-center gap-2">
                 <button 
                   onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' })" 
-                  class="btn btn-primary d-none d-md-block">
+                  class="btn btn-primary">
                   Get In Touch
                 </button>
               
