--- a/index.html
+++ b/index.html
@@ -153,18 +153,12 @@
                 Creative Web & App Developer focused on delivering seamless,
                 engaging digital experiences across all platforms.
               </p>
-              <div class="btnpart d-flex flex-column flex-sm-row justify-content-center justify-content-lg-start align-items-center gap-2">
-                <button 
-                  onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' })" 
-                  class="btn btn-primary">
-                  Get In Touch
-                </button>
-              
-                <a href="Dhaval.pdf" download class="btn">
-                  CV Download
-                </a>
-              </div>
-              
+              <div class="btnpart d-flex justify-content-sm-center align-items-center">
+              <button onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})" class="d-none d-sm-none d-md-block">
+                Get In Touch
+              </button>
+              <button><a href="Dhaval.pdf" download>CV Download</a></button>
+            </div>
             </div>
           </li>
 
