--- a/index.html
+++ b/index.html
@@ -148,16 +148,15 @@
           <li class="col-sm-8 col-12 order-2 order-sm-1">
             <div class="sec1 p-lg-5 p-0">
               <h1>Hello, I'm <span>Dhaval Dave</span></h1>
-              <h2>I'm a <span id="typed-skills"></span></h2>
+              <h2>A passionate <span id="typed-skills"></span></h2>
               <p>
-                Creative Web & App Developer focused on delivering seamless,
-                engaging digital experiences across all platforms.
+                I specialize in crafting clean, responsive, and high-performance digital experiences across web and mobile platforms.
               </p>
               <div class="btnpart d-flex justify-content-center  justify-content-lg-start align-items-center">
               <button onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})" class="d-none d-sm-none d-md-block">
                 Get In Touch
               </button>
-              <button><a href="Dhaval.pdf" download>CV Download</a></button>
+              <button><a href="Dhaval.pdf" download>Download Resume</a></button>
             </div>
             </div>
           </li>
@@ -194,7 +193,7 @@
         <div class="col-lg-7 me-md-3 m-0 offset-md-1 part">
           <h2 class="about-heading">About Me</h2>
           <p class="about-intro">
-            Driven by passion and precision, I craft interfaces that don’t just look good—they perform. With a sharp eye for detail and a knack for clean code, I transform ideas into seamless digital experiences. Whether it’s building responsive layouts or optimizing user interactions, I thrive on solving complex problems with elegant solutions. Always learning, always creating—this is where design meets development.
+            I am a detail-oriented developer with a passion for clean design and scalable code. My goal is to create user-centric interfaces that not only look great but also perform flawlessly. From responsive layouts to intuitive interactions, I merge design and functionality to deliver seamless digital experiences. Always learning, always building—this is where creativity meets technology.
           </p>
         </div>
       </div>
@@ -208,10 +207,8 @@
               <div class="map">
               <div class="card-icon"><i class="ri-school-line"></i></div>
               <div class="card-content">
-                <h4>SSC • 2018</h4>
-                <p>Navchetan High School — 56%</p>
-                <h4>HSC • 2020</h4>
-                <p>Commerce — 47%</p>
+                <h4>BCA • 2023‑24</h4>
+                <p>LJ University — CGPA 8.5</p>
               </div>
               </div>
             </div>
@@ -222,8 +219,6 @@
               <div class="map">
               <div class="card-icon"><i class="ri-computer-line"></i></div>
               <div class="card-content">
-                <h4>BCA • 2023‑24</h4>
-                <p>LJ University — CGPA 8.5</p>
                 <h4>MCA • 2024‑Present</h4>
                 <p>LJ University — CGPA 7.5</p>
               </div>
@@ -249,7 +244,7 @@
               <div class="card-icon"><i class="ri-lightbulb-flash-line"></i></div>
               <div class="card-content">
                 <h4>Side Projects</h4>
-                <p>Portfolio websites & UI/UX mockups</p>
+                <p>Portfolio Website, UI/UX Mockups, Mobile Apps</p>
               </div>
               </div>
             </div>
@@ -277,8 +272,8 @@
               <div class="service-card">
               <i class="ri-global-line display-4 text-primary mb-3"></i>
               <h5 class="fw-bold">Web Development</h5>
-              <p class="">
-                Build modern, responsive websites using HTML, CSS, JS, and backend integration.
+              <p class="text-muted">
+                Develop responsive, scalable websites using HTML, CSS, JavaScript, and backend frameworks.
               </p>
             </div>
             </div>
@@ -291,7 +286,7 @@
               <i class="ri-layout-masonry-line display-4 text-success mb-3"></i>
               <h5 class="fw-bold">Frontend Development</h5>
               <p class="text-muted">
-                Create high-quality UI/UX with frameworks like React, Vue, and modern CSS.
+                Build modern UI/UX using React, Vue, or other frontend libraries with pixel-perfect design.
               </p>
               </div>
             </div>
@@ -304,7 +299,7 @@
               <i class="ri-smartphone-line display-4 text-warning mb-3"></i>
               <h5 class="fw-bold">App Development</h5>
               <p class="text-muted">
-                Build cross-platform mobile applications using Flutter or React Native.
+                Create cross-platform mobile apps using Flutter and React Native with real-time features.
               </p>
             </div>
             </div>
@@ -615,7 +610,7 @@
     <!-- Hero Intro Text -->
     <div class="intro">
       <h2>Hello, I'm <span>Dhaval Dave</span></h2>
-      <p>I build clean, modern & performant web and mobile experiences.</p>
+      <p>I’m open to internships, freelance projects, and full-time roles. Feel free to reach out!</p>
     </div>
   </section>
 
