--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     </section>
     
 
-    <div class="container-fluid skills-section p-5 m-0" id="skills">
+    <div class="container-fluid skills-section p-md-5 p-2 m-0" id="skills">
       <h2 class="section-title">My Skills</h2>
   
       <div class="skills-wrapper">
